--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "ic-dev-kit"
+name = "ic-kit"
 version = "0.3.0"
 authors = ["Parsa Ghadimi <parsa@fleek.co>"]
 edition = "2018"
 
 [dependencies]
 ic-cdk = "0.3.0"
+serde = "1.0.130"
