--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "ic-kit"
 version = "0.3.0"
 authors = ["Parsa Ghadimi <parsa@fleek.co>"]
 edition = "2018"
+license = "Apache-2.0"
 
 [dependencies]
 ic-cdk = "0.3.0"
