--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ ic-cdk = "0.3.1"
 ic-cdk-macros = "0.3.1"
 serde = { version="1.0.130", features = ["derive"] }
 serde_bytes = "0.11.5"
+futures = "0.3.17"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 async-std = { version="1.10.0", features = ["attributes"] }
