--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ ic-cdk-macros = "0.4.0"
 candid="0.7.10"
 serde = { version="1.0.130", features = ["derive"] }
 serde_bytes = "0.11.5"
+bincode = "1.3.3"
 futures = "0.3.17"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
