--- a/ic-kit-sys/Cargo.toml
+++ b/ic-kit-sys/Cargo.toml
@@ -14,3 +14,9 @@ include = ["src", "Cargo.toml", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = {version="1.20", features=["sync"], optional=true}
+futures = {version="0.3", optional=true}
+
+[features]
+default = ["runtime"]
+runtime = ["tokio", "futures"]
