--- a/ic-kit-runtime/Cargo.toml
+++ b/ic-kit-runtime/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 ic-kit-sys = {path="../ic-kit-sys", version="0.1.0", features=["runtime"]}
+tokio = {version="1.20", features=["sync", "macros"]}
 futures = "0.3"
-tokio = "1.20"
 actix = "0.13"
