--- a/ic-kit-runtime/Cargo.toml
+++ b/ic-kit-runtime/Cargo.toml
@@ -2,11 +2,18 @@
 name = "ic-kit-runtime"
 version = "0.0.1"
 edition = "2021"
+authors = ["Parsa Ghadimi <i@parsa.ooo>"]
+description = "IC-Kit's Canister Simulator"
+license = "GPL-3.0"
+repository = "https://github.com/Psychedelic/ic-kit"
+documentation = "https://docs.rs/ic-kit-runtime"
+categories = ["api-bindings", "development-tools::testing"]
+keywords = ["internet-computer", "canister", "cdk", "fleek"]
+include = ["src", "Cargo.toml", "README.md"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-ic-kit-sys = {path="../ic-kit-sys", version="0.1.0", features=["runtime"]}
+ic-kit-sys = {path="../ic-kit-sys", version="0.1.1", features=["runtime"]}
 tokio = {version="1.20", features=["sync", "macros"]}
 futures = "0.3"
 actix = "0.13"
