--- a/ic-kit-runtime/Cargo.toml
+++ b/ic-kit-runtime/Cargo.toml
@@ -16,6 +16,7 @@ include = ["src", "Cargo.toml", "README.md"]
 ic-kit-sys = {path="../ic-kit-sys", version="0.1.1", features=["runtime"]}
 ic-types = "0.4.1"
 tokio = {version="1.20", features=["sync", "macros"]}
+thread-local-panic-hook = "0.1.0"
 memmap = "0.7.0"
 futures = "0.3"
 actix = "0.13"
