--- a/ic-kit/Cargo.toml
+++ b/ic-kit/Cargo.toml
@@ -16,15 +16,11 @@ include = ["src", "Cargo.toml", "README.md"]
 ic-kit-sys = {path="../ic-kit-sys", version="0.1.0"}
 ic-kit-macros = {path="../ic-kit-macros", version="0.1.0"}
 ic-kit-runtime = {path="../ic-kit-runtime", version="0.0.1"}
-ic-cdk = "0.5"
+serde = "1.0"
+wasm-rs-async-executor = "0.9.0"
+tokio = {version="1.20", features=["sync", "macros"]}
+ic-cdk = "0.5.5"
 candid="0.7"
-serde = { version="1.0.130", features = ["derive"] }
-serde_bytes = "0.11.5"
-bincode = "1.3.3"
-futures = "0.3.17"
-
-[target.'cfg(not(target_family = "wasm"))'.dependencies]
-async-std = { version="1.10.0", features = ["attributes"] }
 
 [patch.crates-io]
 num-bigint = { git = "https://github.com/rust-num/num-bigint" }
