offer IC's experimental features as cargo feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ members = [
 [profile.release]
 lto = true
 opt-level = 'z'
+
+[patch.crates-io]
+num-bigint = { git = "https://github.com/rust-num/num-bigint" }
