--- a/ic-kit-sys/Cargo.toml
+++ b/ic-kit-sys/Cargo.toml
@@ -14,5 +14,5 @@ include = ["src", "Cargo.toml", "README.md"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-tokio = {version="1.20", features=["sync"], optional=true}
-futures = {version="0.3", optional=true}
+tokio = {version="1.20", features=["sync"]}
+futures = {version="0.3"}
