--- a/samples/counter/Cargo.toml
+++ b/samples/counter/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "counter"
+name = "ic_kit_example_counter"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 ic-kit = {path="../../ic-kit"}
+ic-kit-sys = {path="../../ic-kit-sys"}
 
 [lib]
 crate-type = ["cdylib"]
