--- a/samples/counter/Cargo.toml
+++ b/samples/counter/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 ic-kit = {path="../../ic-kit"}
 ic-kit-sys = {path="../../ic-kit-sys"}
 
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+tokio = {version="1.20", features=["sync", "rt"]}
+
 [lib]
 crate-type = ["cdylib"]
 path = "src/lib.rs"
