--- a/ic-kit-runtime/Cargo.toml
+++ b/ic-kit-runtime/Cargo.toml
@@ -20,8 +20,10 @@ cfg-if = "0.1"
 ic-kit-sys = {path="../ic-kit-sys", version="0.1.1"}
 ic-types = "0.4.1"
 tokio = {version="1.20", features=["sync", "macros", "rt"]}
-crossbeam = "0.8.2"
 thread-local-panic-hook = "0.1.0"
+lazy_static = "1.4"
 memmap = "0.7.0"
 futures = "0.3"
 actix = "0.13"
+candid = "0.7"
+serde = "1.0"
