--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+    "e2e",
     "examples/counter",
     "examples/naming_system",
     "examples/fib",
@@ -9,9 +10,9 @@ members = [
     "ic-kit-runtime",
 ]
 
-[profile.release]
+[profile.canister-release]
+inherits = "release"
+debug = false
+panic = "abort"
 lto = true
 opt-level = 'z'
-
-[patch.crates-io]
-num-bigint = { git = "https://github.com/rust-num/num-bigint" }
