--- a/ic-kit-runtime/Cargo.toml
+++ b/ic-kit-runtime/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
 name = "ic-kit-runtime"
-version = "0.1.0-alpha.0"
+version = "0.1.0-alpha.1"
 edition = "2021"
-authors = ["Parsa Ghadimi <i@parsa.ooo>"]
+authors = ["Parsa Ghadimi <i@parsa.ooo>", "Ossian Mapes <oz@fleek.co>"]
 description = "IC-Kit's Canister Simulator"
-license = "GPL-3.0"
+license = "MIT"
+readme = "README.md"
 repository = "https://github.com/Psychedelic/ic-kit"
 documentation = "https://docs.rs/ic-kit-runtime"
+homepage = "https://sly.ooo"
 categories = ["api-bindings", "development-tools::testing"]
-keywords = ["internet-computer", "canister", "cdk", "fleek"]
+keywords = ["internet-computer", "canister", "fleek", "psycedelic"]
 include = ["src", "Cargo.toml", "README.md"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cfg-if = "0.1"
+cfg-if = "1.0.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-ic-kit-sys = {path="../ic-kit-sys", version="0.1.2"}
+ic-kit-sys = {path="../ic-kit-sys", version="0.1.3"}
 ic-types = "0.4.1"
 tokio = {version="1.20", features=["sync", "macros", "rt"]}
 thread-local-panic-hook = "0.1.0"
