--- a/ic-kit-stable/Cargo.toml
+++ b/ic-kit-stable/Cargo.toml
@@ -10,13 +10,14 @@ repository = "https://github.com/Psychedelic/ic-kit"
 documentation = "https://docs.rs/ic-kit-stable"
 homepage = "https://sly.ooo"
 categories = ["data-structures"]
-keywords = ["internet-computer", "canister", "fleek", "psycedelic"]
+keywords = ["internet-computer", "canister", "fleek", "psychedelic"]
 include = ["src", "Cargo.toml", "README.md"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ic-kit = {path="../ic-kit", version="0.5.0-alpha.1"}
+ic-kit-certified = {path="../ic-kit-certified", version="0.1.0-alpha.0"}
 
 [features]
 experimental-stable64 = ["ic-kit/experimental-stable64"]
