--- a/ic-kit-certified/Cargo.toml
+++ b/ic-kit-certified/Cargo.toml
@@ -14,6 +14,8 @@ keywords = ["internet-computer", "canister", "fleek", "psychedelic"]
 include = ["src", "Cargo.toml", "README.md"]
 
 [dependencies]
+ic-kit-stable = {path="../ic-kit-stable"}
+ic-types = "0.4.1"
 candid = "0.7"
 sha2 = "0.10.2"
 serde = { version="1.0.116", features = ["derive"] }
