the kit-wasm-export feature should be present to export function for WASM
this allows a canister to import another canister as crate without re-implementing that canister

--- a/examples/multi_counter/Cargo.toml
+++ b/examples/multi_counter/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 
 [dependencies]
 ic-kit = {path="../../ic-kit"}
-ic_kit_example_counter = {path="../counter"}
+ic_kit_example_counter = {path="../counter", default-features=false}
 
-[[bin]]
-name = "ic_kit_example_multi_counter"
-path = "src/main.rs"
+[features]
+default = ["kit-wasm-export"]
+kit-wasm-export = []
