--- a/examples/naming_system/Cargo.toml
+++ b/examples/naming_system/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 ic-kit = {path="../../ic-kit"}
 
-[[bin]]
-name = "ic_kit_example_naming_system"
-path = "src/main.rs"
+[features]
+default = ["kit-wasm-export"]
+kit-wasm-export = []
