--- a/examples/counter/Cargo.toml
+++ b/examples/counter/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2021"
 ic-kit = {path="../../ic-kit"}
 
 [features]
-default = ["kit-wasm-export"]
 kit-wasm-export = []
+
+[lib]
+crate-type = ["cdylib", "lib"]
