--- a/examples/multi_counter/Cargo.toml
+++ b/examples/multi_counter/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 ic-kit = {path="../../ic-kit"}
-ic_kit_example_counter = {path="../counter", default-features=false}
+ic_kit_example_counter = {path="../counter"}
 
 [features]
-default = ["kit-wasm-export"]
 kit-wasm-export = []
+
+[lib]
+crate-type = ["cdylib", "lib"]
