--- a/ic-kit/Cargo.toml
+++ b/ic-kit/Cargo.toml
@@ -16,6 +16,7 @@ include = ["src", "Cargo.toml", "README.md"]
 [dependencies]
 ic-kit-sys = {path="../ic-kit-sys", version="0.1.3"}
 ic-kit-macros = {path="../ic-kit-macros", version="0.1.1-alpha.0"}
+ic-kit-http = {path="../ic-kit-http", version="0.1.0-alpha.0", optional=true}
 candid="0.7"
 serde = "1.0"
 
@@ -23,5 +24,7 @@ serde = "1.0"
 ic-kit-runtime = {path="../ic-kit-runtime", version="0.1.0-alpha.1"}
 
 [features]
+default = []
 experimental-stable64 = []
 experimental-cycles128 = []
+http = ["dep:ic-kit-http", "ic-kit-macros/http"]
