--- a/examples/pastebin/Cargo.toml
+++ b/examples/pastebin/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 ic-kit = {path="../../ic-kit", features = ["http"]}
+tinytemplate = "1.1"
+serde = { version = "1.0", features = ["derive"] }
 
 [[bin]]
 name = "ic_kit_example_pastebin"
